SP_Vault_Comp/force-app/main/default/objects/Score_Submission__c/Score_Submission__c.object-meta.xml
<CustomObject>
    <label>Score Submission</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Score Submission Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Score Submissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>