SP_Vault_Comp/force-app/main/default/objects/Score_Submission__c/fields/Athlete_Name__c.field-meta.xml
<CustomField>
    <fullName>Athlete_Name__c</fullName>
    <inlineHelpText>Select the Athlete&apos;s Name</inlineHelpText>
    <label>Athlete&apos;s Name</label>
    <referenceTo>Athlete__c</referenceTo>
    <relationshipLabel>Score Submissions</relationshipLabel>
    <relationshipName>Score_Submissions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>