SP_Vault_Comp/force-app/main/default/objects/Score_Submission__c/fields/Calculated_Points__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Points__c</fullName>
    <formula>Score_1st__c * Vault_Workout__r.Round_Value__c + Score_2nd__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>