SP_Vault_Comp/force-app/main/default/objects/Score_Submission__c/fields/Calculated_Ranking_Points__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Ranking_Points__c</fullName>
    <formula>IF( 
Vault_Workout__r.Is_Dumbbell__c , 
Calculated_Points__c + Calculated_Points__c * (0.01 * Weight_Used__c + 0.6), 
Calculated_Points__c + Calculated_Points__c * (0.005 * Weight_Used__c + 0.525)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Ranking Points</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>