SP_Vault_Comp/force-app/main/default/objects/Score_Submission__c/fields/Did_RX_or_RXplus__c.field-meta.xml
<CustomField>
    <fullName>Did_RX_or_RXplus__c</fullName>
    <formula>Weight_Used__c &gt;=  Vault_Workout__r.RX_Weight_Male__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Did RX or RX+?</label>
    <type>Checkbox</type>
</CustomField>