SP_Vault_Comp/force-app/main/default/objects/Score_Submission__c/fields/Is_Dumbell__c.field-meta.xml
<CustomField>
    <fullName>Is_Dumbell__c</fullName>
    <formula>Vault_Workout__r.Is_Dumbbell__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Dumbell?</label>
    <type>Checkbox</type>
</CustomField>