SP_Vault_Comp/force-app/main/default/objects/Score_Submission__c/fields/Is_Goal_Time__c.field-meta.xml
<CustomField>
    <fullName>Is_Goal_Time__c</fullName>
    <formula>Vault_Workout__r.Is_Goal_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Goal Time?</label>
    <type>Checkbox</type>
</CustomField>