SP_Vault_Comp/force-app/main/default/objects/Score_Submission__c/fields/Is_Score_Between_Goal__c.field-meta.xml
<CustomField>
    <fullName>Is_Score_Between_Goal__c</fullName>
    <formula>IF(Vault_Workout__r.Is_Goal_Time__c, 
  IF(Weight_Used__c &gt;= Vault_Workout__r.RX_Weight_Male__c, IF(Calculated_Points__c &lt;= Vault_Workout__r.Goal_High_Value__c, 100, 0), IF(AND(Calculated_Points__c &lt;= Vault_Workout__r.Goal_High_Value__c, Calculated_Points__c &gt;= Vault_Workout__r.Goal_Low_Value__c), 100, 0)
  ), 

  IF(Weight_Used__c &gt;= Vault_Workout__r.RX_Weight_Male__c, IF(Calculated_Points__c &gt;= Vault_Workout__r.Goal_Low_Value__c, 100, 0), IF(AND(Calculated_Points__c &lt;= Vault_Workout__r.Goal_High_Value__c, Calculated_Points__c &gt;= Vault_Workout__r.Goal_Low_Value__c), 100, 0)
  )

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Score Between Goal?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>