SP_Vault_Comp/force-app/main/default/objects/Score_Submission__c/fields/Points_Based_on_Rank__c.field-meta.xml
<CustomField>
    <fullName>Points_Based_on_Rank__c</fullName>
    <label>Points Based on Rank</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>