SP_Vault_Comp/force-app/main/default/objects/Score_Submission__c/fields/Round_Value__c.field-meta.xml
<CustomField>
    <fullName>Round_Value__c</fullName>
    <formula>Vault_Workout__r.Round_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Round Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>