SP_Vault_Comp/force-app/main/default/objects/Score_Submission__c/fields/RX_Weight_Male__c.field-meta.xml
<CustomField>
    <fullName>RX_Weight_Male__c</fullName>
    <formula>Vault_Workout__r.RX_Weight_Male__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RX Weight (Male)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>