SP_Vault_Comp/force-app/main/default/objects/Score_Submission__c/fields/Score_1st__c.field-meta.xml
<CustomField>
    <fullName>Score_1st__c</fullName>
    <inlineHelpText>1st Value (Mins or Rounds)</inlineHelpText>
    <label>Score (1st)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>