SP_Vault_Comp/force-app/main/default/objects/Score_Submission__c/fields/Score_2nd__c.field-meta.xml
<CustomField>
    <fullName>Score_2nd__c</fullName>
    <inlineHelpText>2nd Value (Secs or Reps)</inlineHelpText>
    <label>Score (2nd)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>