SP_Vault_Comp/force-app/main/default/objects/Score_Submission__c/fields/Tie_Break_Points__c.field-meta.xml
<CustomField>
    <fullName>Tie_Break_Points__c</fullName>
    <formula>Total_Workout_Points__c * 1000000 + ( Points_Based_on_Rank__c * Points_Based_on_Rank__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tie Break Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>