SP_Vault_Comp/force-app/main/default/objects/Score_Submission__c/fields/Total_Workout_Points__c.field-meta.xml
<CustomField>
    <fullName>Total_Workout_Points__c</fullName>
    <inlineHelpText>Goal based points + Points based on Rank</inlineHelpText>
    <label>Total Workout Points</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>