SP_Vault_Comp/force-app/main/default/objects/Score_Submission__c/fields/Vault_Workout__c.field-meta.xml
<CustomField>
    <fullName>Vault_Workout__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Select the Vault Workout</inlineHelpText>
    <label>Vault Workout</label>
    <referenceTo>Vault_Workout__c</referenceTo>
    <relationshipLabel>Score Submissions</relationshipLabel>
    <relationshipName>Score_Submissions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>