SP_Vault_Comp/force-app/main/default/objects/Score_Submission__c/fields/Weight_Used__c.field-meta.xml
<CustomField>
    <fullName>Weight_Used__c</fullName>
    <inlineHelpText>Weight Used in Workout</inlineHelpText>
    <label>Weight Used</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>