SP_Vault_Comp/force-app/main/default/objects/Score_Submission__c/fields/Workout_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Workout_Order_Number__c</fullName>
    <formula>Vault_Workout__r.Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Workout Order Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>