SP_Vault_Comp/force-app/main/default/objects/Score_Submission__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Athlete_Name__c</columns>
    <columns>Vault_Workout__c</columns>
    <columns>Score_1st__c</columns>
    <columns>Score_2nd__c</columns>
    <columns>Calculated_Points__c</columns>
    <columns>Calculated_Ranking_Points__c</columns>
    <columns>Is_Score_Between_Goal__c</columns>
    <columns>Points_Based_on_Rank__c</columns>
    <columns>Total_Workout_Points__c</columns>
    <columns>Weight_Used__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>